--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -25,7 +25,7 @@
         <div class="hero-area">
             <div class="hero-text">
                 <h1>Darel Rodriguez</h1>
-                <p>Software Developer</p>
+                <p>Freelance Software Developer</p>
             <div class="button"><a href="#about-me">About Me</a></div>
             </div>
             <div class="socials">
@@ -47,10 +47,12 @@
         <section class="sub-section" id="about-me">
             <div class="information">
                 <h2>About Me</h2>
-                <p>Hello my name is Darel Rodriguez. I'm a Computer Science graduate that's eager to use his skills to contribute to a company.</p>
+                <p>Hello, my name is Darel Rodriguez. I'm a Freelance Software Developer with a bachelor's degree in Computer Science. 
+                I'm fluent in different programming languages like: Java, Python, C++, SQL, HTML, JavaScript, etc.
+                Below you can find a few of my projects.</p>
             </div>
             <div class="headshot-container">
-                <img class="headshot" src="src/images/headshot.jpg" alt="Darel Rodriguez headshot">
+                <img class="headshot" src="src/images/Me.jpg" alt="Darel Rodriguez headshot">
             </div>
 
         </section>
@@ -58,38 +60,47 @@
             <h2>Projects</h2>
             <div class="project-container">
                 <div class="project-card">
-                    <img class="project-image" src="src/images/Guess The Word.png" alt="Guess The Word Project">
-                    <h3>Guess The Word</h3>
-                    <p class="subtext"> In this project one player enters a word and the other has to try guessed before the lives run out.</p>
+                    <img class="project-image" src="src/images/Dog.jpg" alt="Animal Shelter Application">
+                    <h3>Animal Shelter Application</h3>
+                    <p class="subtext">This software is about sorting and collecting data. It also allows to use information that has been stored about different animals in a database. 
+                    The user can modify, add, or remove animals if they wish to do so.</p>
                     <hr/>
-                    <p class="subtext"><a class="project-link" href="https://github.com/Darel1997/Personal-Projects/tree/master/C%2B%2B%20-%20Guess%20The%20Word">View here</a></p>
+                    <p class="subtext"><a class="project-link" href="https://github.com/Darel1997/Personal-Projects/blob/master/Client%20Server%20Project/ProjectTwoDashboard(1).ipynb">View here</a></p>
                 </div>
                 <div class="project-card">
-                    <img class="project-image" src="src/images/Snake Game.webp" alt="Snake Game Project">
-                    <h3>Snake Game</h3>
-                    <p class="subtext">The player controls a long, thin creature, resembling a snake, which roams around on a bordered plane, picking up food (or some other item), trying to avoid hitting its own tail or the edges of the playing area.</p>
+                    <img class="project-image" src="src/images/DesignINVENTORY.webp" alt="Inventory Application">
+                    <h3>Inventory Application</h3>
+                    <p class="subtext">The Inventory application tracks items in an inventory. It requires to have a login screen, a screen that displays the items in an inventory and a screen to send SMS messages. My design was intended to be easy to follow to accomodate each type of user.</p>
                     <hr/>
-                    <p class="subtext"><a class="project-link" href="https://github.com/Darel1997/Personal-Projects/tree/master/Snake%20Game">View here</a></p>
+                    <p class="subtext"><a class="project-link" href="https://github.com/Darel1997/Personal-Projects/tree/master/Inventory%20App">View here</a></p>
                 </div>
                 <div class="project-card">
                     <img class="project-image" src="src/images/Pong.png" alt="Pong Game Project">
                     <h3>Pong Game</h3>
                     <p class="subtext"> This project is the classic game Pong. The player controls an in-game paddle by moving it vertically across the left or right side of the screen.</p>
                     <hr/>
-                    <p class="subtext"><a class="project-link" href="https://github.com/Darel1997/Personal-Projects/tree/master/Python%20-%20Pong">View here</a></p>
+                    <p class="subtext"><a class="project-link" href="https://github.com/Darel1997/Personal-Projects/blob/master/Python%20-%20Pong/Pong/Pong.py">View here</a></p>
                 </div>              
                 <div class="project-card">
-                    <img class="project-image" src="src/images/Brick Breaker.jpeg" alt="Brick Breaker Game Project">
-                    <h3>Brick Breaker Game</h3>
-                    <p class="subtext">The player must smash a wall of bricks by deflecting a bouncing ball with a paddle in order to win</p>
+                    <img class="project-image" src="src/images/Library Pic.png" alt="Library Management System">
+                    <h3>Library Management System</h3>
+                    <p class="subtext">This library management system is capable to issuing books and allows consumers check different books and their titles categorically. 
+                                    It keeps track of all the details about the books in the library, their price, status, and the total number of books available in the library.</p>
                     <hr/>
-                    <p class="subtext"><a class="project-link" href="https://github.com/Darel1997/Personal-Projects/tree/master/Brick%20Breaker%20Game">View here</a></p>
+                    <p class="subtext"><a class="project-link" href="https://github.com/Darel1997/Personal-Projects/blob/master/Library%20Management%20System/LibraryManagementSystemAndStoredProceduresFINAL.sql">View here</a></p>
                 </div>
             </div>
         </section>
         <footer id="contact-me">
             <h2>Contact me</h2>
-            <p>darelrodriguez1997@gmail.com</p>
+        <form action="https://formsubmit.co/darelrodriguez1997@gmail.com" method="POST">
+            <input type="hidden" name="_subject" value="New email">
+            <input type="email" name="email" placeholder="Email Address" autocomplete="off" required><br /><br />
+            <input type="hidden" name="_next" value="https://darel-rodriguez.com/thankyou.html">
+            <textarea rows="5" cols="60" name="message" placeholder="Message" autocomplete="off" required></textarea><br /><br />
+            <input type="hidden" name="_captcha" value="false">
+            <button type="submit">Send Message</button>
+        </form>
         </footer>
         <script src="src/app.js"></script>
     </body>
